Fixed the alignment of the logo

--- a/win98.css
+++ b/win98.css
@@ -17,6 +17,9 @@
 	width: 112px;
 	height: 31px;
 	margin: 7px 12px 10px;
+}
+
+#header-img-a {
 	vertical-align: unset;
 }
 
